--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 
   <body>
     <header>
-            
-
+      <nav>
+        <ul>
+          <li><a>New Questions</a></li>
+          <li><a>About</a></li>
+          <li><h3><a>Icebreakers</a></h3></li>
+        </ul>   
+      </nav>
     </header>
   </body>
 </html>
