automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <ul>
           <li><a>New Questions</a></li>
           <li><a>About</a></li>
-          <li><h3><a>Icebreakers</a></h3></li>
         </ul>
+        <h3><a>Icebreakers</a></h3>
       </nav>
     </header>
   </body>
