--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
           <li><a>New Questions</a></li>
           <li><a>About</a></li>
         </ul>
-        <h3><a>Icebreakers</a></h3>
       </nav>
+    </header>
+    <header>
+      <h3><a>Icebreakers</a></h3>
     </header>
   </body>
 </html>
